--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -3,8 +3,9 @@
 {% block title %}Авториизация{% endblock %}
 
 {% block content %}
-<form action="">
+<form action="{% url "login" %}" method='post'>
     {% csrf_token %}
     {{form.as_p}}
+    <button type='submit'>Войти</button>
 </form>
 {% endblock %}
