Added search, comments, wish list, admin

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,7 @@
         {% endif %}
     </header>
     <main>
+        {% include "movie/search.html" %}
         {% block content %}
         {% endblock %}
     </main>
